<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/table_me_function_bg">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table52"
            android:textColor="#333333"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/batch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:textColor="#FE7D52"
            android:text="@string/table53"
            android:drawableLeft="@mipmap/table_rack_img1"
            android:drawablePadding="5.5dp"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:layout_marginTop="27dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table54"
            android:textColor="#999999"
            android:background="@drawable/button_bg_f8f8f8_10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/right"
            app:layout_constraintTop_toBottomOf="@id/recyclerView"
            android:layout_marginTop="37.5dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table55"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_bg_ff7443_10"
            app:layout_constraintLeft_toRightOf="@id/left"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView"
            android:layout_marginTop="37.5dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:textSize="12dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="20.5dp"
            app:layout_constraintTop_toBottomOf="@id/left" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
