<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/window"
        android:layout_width="84dp"
        android:layout_height="136dp"
        android:background="@mipmap/table_group_img13"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp"
        >

        <TextView
            android:id="@+id/scope_week"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/table36"
            android:textColor="#FFFFFF"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#909090"
            app:layout_constraintTop_toBottomOf="@+id/scope_week" />

        <TextView
            android:id="@+id/scope_mouth"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/table37"
            android:textColor="#FFFFFF"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#909090"
            app:layout_constraintTop_toBottomOf="@+id/scope_mouth" />

        <TextView
            android:id="@+id/scope_all"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/table38"
            android:textColor="#FFFFFF"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>