<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.GroupSelectActivity">

        <ImageView
            android:id="@+id/back"
            android:layout_width="10dp"
            android:layout_height="17dp"
            android:src="@mipmap/avtivity_back"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <View
            android:id="@+id/bg_back"
            android:layout_width="35dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/view1"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/back"
            app:layout_constraintBottom_toBottomOf="@id/back"
            android:text="标题" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@mipmap/avtivity_search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/back"
            app:layout_constraintBottom_toBottomOf="@id/back"
            android:layout_marginRight="15dp" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#EFEFEF"
            android:layout_marginTop="13.5dp"
            app:layout_constraintTop_toBottomOf="@id/back" />

        <TextView
            android:id="@+id/allWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table42"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1"
            android:paddingTop="3dp"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="7.5dp"
            android:layout_marginLeft="15dp"
            android:textSize="13dp"
            android:textColor="@color/select_tv_press"
            android:background="@drawable/button_press"
            />

        <TextView
            android:id="@+id/words1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table43"
            app:layout_constraintLeft_toRightOf="@id/allWords"
            app:layout_constraintRight_toLeftOf="@id/words2"
            app:layout_constraintBaseline_toBaselineOf="@id/allWords"
            android:textColor="@color/select_tv_normal"
            android:textSize="13sp"
            android:paddingTop="3dp"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/words2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table44"
            app:layout_constraintLeft_toRightOf="@id/words1"
            app:layout_constraintRight_toLeftOf="@id/words3"
            app:layout_constraintBaseline_toBaselineOf="@id/allWords"
            android:textColor="@color/select_tv_normal"
            android:textSize="13sp"
            android:paddingTop="3dp"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/words3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table45"
            app:layout_constraintLeft_toRightOf="@id/words2"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="15dp"
            app:layout_constraintBaseline_toBaselineOf="@id/allWords"
            android:textColor="@color/select_tv_normal"
            android:textSize="13sp"
            android:paddingTop="3dp"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>


        <TextView
            android:id="@+id/allState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table46"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/allWords"
            android:paddingTop="3dp"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:textSize="13dp"
            android:textColor="@color/select_tv_press"
            android:background="@drawable/button_press"
            />

        <TextView
            android:id="@+id/state1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table47"
            app:layout_constraintLeft_toRightOf="@id/allState"
            app:layout_constraintRight_toLeftOf="@id/state2"
            app:layout_constraintBaseline_toBaselineOf="@id/allState"
            android:textColor="@color/select_tv_normal"
            android:textSize="13sp"
            android:paddingTop="3dp"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/state2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table48"
            app:layout_constraintLeft_toRightOf="@id/state1"
            app:layout_constraintRight_toLeftOf="@id/state3"
            app:layout_constraintBaseline_toBaselineOf="@id/allState"
            android:textColor="@color/select_tv_normal"
            android:textSize="13sp"
            android:paddingTop="3dp"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/state3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table49"
            app:layout_constraintLeft_toLeftOf="@id/words2"
            app:layout_constraintBaseline_toBaselineOf="@id/allState"
            android:textColor="@color/select_tv_normal"
            android:textSize="13sp"
            android:paddingTop="3dp"
            android:paddingBottom="2.5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rightRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
